--- a/7_Project-DOM/5_Insta-Love.html
+++ b/7_Project-DOM/5_Insta-Love.html
@@ -66,15 +66,14 @@
         let icon = document.querySelector('i')
 
         Contaner.addEventListener('dblclick', function(){
-            icon.style.transform = 'translate(-50%,-50% )scale(1)'
+            icon.style.transform = 'translate(-50%,-50% )scale(1)';
             icon.style.color = 'red'
 
             setTimeout(function(){
-                icon.style.transform = 'translate(-50%,-50% )scale(0)'
+                icon.style.transform = 'translate(-50%,-50% )scale(0)';
 
-            },2000)
+            }, 2000)
         })
-
 
 
     </script>
