APIRequest Learning with  Project

--- a/9_advance-one/APIRequest.html
+++ b/9_advance-one/APIRequest.html
@@ -23,7 +23,7 @@
     const follower = document.querySelector('#follower')
     const btn = document.querySelector('#btn')
 
-    const RequestUrl = 'https://api.github.com/users/Datalux'
+    const RequestUrl = 'https://api.github.com/users/AmanLucifer'
 
 
     btn.addEventListener('click', function () {
